src/app/map/map.component.scss
.map-container {
  position: relative !important;
  width: 100%; height: 600px;
  margin: 2px;
  padding: 2px;

}

.map-frame {
  border: 2px solid black;
  height: 100%;
}

#map {
  height: 100%;
}

.loading-shade {
  z-index: 650;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(0, 0, 0, 0.28);
}

